--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script src="./src/Scenes/Load.js"></script>
     <script src="./src/Scenes/Platformer.js"></script>
     <script src="./src/Scenes/winScreen.js"></script>
+    <script src="./src/Scenes/pause.js"></script>
+    <script src="./src/Scenes/ui.js"></script>
     <script src="./src/main.js"></script>
 </head>
 <body>
