adding end screens

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="./src/Scenes/winScreen.js"></script>
     <script src="./src/Scenes/pause.js"></script>
     <script src="./src/Scenes/ui.js"></script>
+    <script src="./src/Scenes/creditScreen.js"></script>
     <script src="./src/main.js"></script>
 </head>
 <body>
