--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="./src/Scenes/pause.js"></script>
     <script src="./src/Scenes/ui.js"></script>
     <script src="./src/Scenes/creditScreen.js"></script>
+    <script src="./src/Scenes/titleScreen.js"></script>
     <script src="./src/main.js"></script>
 </head>
 <body>
